--- a/src/Pages/Team.cshtml
+++ b/src/Pages/Team.cshtml
@@ -12,7 +12,7 @@
 
         <div class="row">
             <div class="col-md-3">
-                <img class="rounded-image" alt="ProfilePicture" src="">
+                <img class="rounded-image" alt="ProfilePicture" src="~/images/david.jpg"/>
                 <h6 class="col-md-3-name">David Silwal</h6>
                 <span>
                     <a href="https://twitter.com/davidsilwal"><i class="fa fa-twitter" aria-hidden="true"></i></a>
