--- a/src/Views/Shared/_Layout.cshtml
+++ b/src/Views/Shared/_Layout.cshtml
@@ -90,7 +90,7 @@
                             <ul class="list-unstyled">
                                 <li><a href="/">Home</a></li>
                                 <li><a href="/privacy-policy">Privacy Policy</a></li>
-                                <li><a href="/code-of-conduct">Code of Conduct</a></li>
+                                @*<li><a href="/code-of-conduct">Code of Conduct</a></li>*@
                                 @*<li>@await Html.PartialAsync("_LoginPartial")</li>*@                                
                             </ul>
                         </div>
